<resources>
    <string name="app_name">AtiLuz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="a_land_transport_provider_that_is_registered_accredited_franchised_and_insured_with_reliable_and_efficient_service_to_any_point_within_the_philippines">A land transport provider that is registered, accredited, franchised and insured with reliable and efficient service to any point within the Philippines</string>
    <string name="log_in_to_your_account">Log in to your Account:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="dashboard">Dashboard</string>
    <string name="book_your_van">Book your Van</string>
    <string name="fbLink">
        <a href="https://www.facebook.com/atiluz.coop">AtiLuzTransport Service Cooperative</a>
    </string>

    <string name="addressLink">
        <a href="https://www.google.com/maps/dir/14.570257,121.0449762/15.0565751,120.9380622/@14.811572,120.6455531,10z/data=!3m1!4b1!4m4!4m3!1m1!4e1!1m0?entry=ttu">2nd flr, St. Thomas Bldg., Maharlika Hwy, Malipampang</a>
    </string>
</resources>